<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"

    android:background="@drawable/back5"
    tools:context=".Urticaria">


    <TextView
        android:id="@+id/activity_main_link"
        android:layout_width="237dp"
        android:layout_height="142dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="620dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/hyperlinkPityriasisRosea"
        android:textAlignment="center"
        android:textColor="#E89191"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="391dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="140dp"
        android:fontFamily="@font/comic_neue"
        android:text="Urticaria"
        android:textAlignment="center"
        android:textColor="#E89191"
        android:textSize="45sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="363dp"
        android:layout_height="288dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="151dp"
        android:layout_marginBottom="112dp"
        app:srcCompat="@drawable/ba4" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="395dp"
        android:layout_height="319dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="359dp"
        android:layout_marginBottom="112dp"
        app:srcCompat="@drawable/ba3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="302dp"
        android:layout_height="106dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="233dp"
        android:layout_marginBottom="190dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/informationUrticaria"
        android:textAlignment="center"
        android:textColor="#517e72"
        android:textSize="23dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="231dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="442dp"
        android:layout_marginBottom="112dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/difficultyLevelUrticaria"
        android:textAlignment="center"
        android:textColor="#517e72"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="190dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/detected"
        android:textAlignment="center"
        android:textColor="#E89191"
        android:textSize="23dp"
        android:textStyle="bold" />


</RelativeLayout>